--- a/src/pages/tutorial/tutorial_vsmac_testlocalwebapi.html
+++ b/src/pages/tutorial/tutorial_vsmac_testlocalwebapi.html
@@ -7,11 +7,11 @@ menu2: vsmac
 
 <div class=lz-r-content>
     <h3>Test Local WebApi</h3>
-    <p>In this step we will use a browser page to make calls against the local WebApi (PetStoreMac) project.</p>
+    <p>In this step we will use a browser page to make calls against the local WebApi (PetStore) project.</p>
 
 <h4>7.1 Test WebApi using Browser</h4>
 <ol>
-    <li>Set the startup project to PetStoreMac.</li>
+    <li>Set the startup project to PetStore.</li>
     <li>Start Debugging the PetStore project. A browser tab opens showing the Swagger PetStoreAPI.
         <ul>
             <li>You may see a Security Warning dialog "Invalid development certificate found".
