--- a/src/pages/tutorial/tutorial_vsmac_xamarinapp.html
+++ b/src/pages/tutorial/tutorial_vsmac_xamarinapp.html
@@ -108,9 +108,8 @@ menu2: vsmac
     <h4>10.1 Create the PetStoreMobileApp Solution</h4>
     <ol>
         <li>Launch a new instance of Visual Studio</li>
-        <li>todo - mod for solution creation</li>
-        <li>Right Click on "Solution PetStore" in the Solution Explorer. The context menu appears.</li>
-        <li>Select "Add &RightArrow; New Project". The "Choose a template for your project" dialog appears.</li>
+        li>Click on New project. The "Choose a template for your new project" dialog appears.</li>
+   
         <li>Select "Multiplatform &rightarrow; App &rightarrow; Blank Forms App" and click on the Next button.
             The "Configure your Tabbed Forms App" dialog appears.
         </li>
@@ -120,7 +119,8 @@ menu2: vsmac
         <li>Click on the Next button.
             The second page of the "Configure your Blank Forms App" dialog appears.
         </li>
-        <li>Click the Create button. A question dialog appears warning that the PetStoreMac
+        <li>Edit the Location to point to the LazyStackTutorial folder.</li>
+        <li>Click the Create button. A question dialog appears warning that the PetStore
             directory already exists. Click on the "yes" button.
         </li>
         <li> Two projects are created:
