--- a/src/pages/tutorial/tutorial_vsmac_configure.html
+++ b/src/pages/tutorial/tutorial_vsmac_configure.html
@@ -26,11 +26,11 @@ menu2: vsmac
 <ul>
   <li>Controller projects</li>
   <li>Lambda projects</li>
-  <li>PetStoreMacClientSDK project</li>
-  <li>PetStoreMacSchema project</li>
+  <li>PetStoreClientSDK project</li>
+  <li>PetStoreSchema project</li>
 </ul>
 <p>These generated projects should not be edited as your changes would be lost.</p>
-<p>In addition to the generated projects, portions of the WebApi project "PetStoreMac" are updated with each execution of 
+<p>In addition to the generated projects, portions of the WebApi project "PetStore" are updated with each execution of 
   LazyStack - Generate Projects. 
 </p>
 <p>LazyStack - Generate Projects does not update or modify any other projects in your solution.</p>
@@ -45,7 +45,7 @@ menu2: vsmac
     </li> 
     <li>Rebuild Solution. All projects in the solution are compiled successfully.</li>
 </ol>
-<h4>5.2 Update WebApi project (PetStoreMac) launchSettings.json file</h4>
+<h4>5.2 Update WebApi project (PetStore) launchSettings.json file</h4>
 <ol>
     <li>Open the PetStore\Properties\launchSettings.json file.</li>
     <li>Add the "TABLE_NAME" environmental variable as shown below on line 25.</li>
@@ -84,7 +84,7 @@ menu2: vsmac
 <p></p>
 <h4>Step Summary</h4>
 <p>In this step we updated the LazyStack.yaml file to create a DynamoDB resource and configure the 
-    WebApi (PetStoreMac) project and Lambdas projects to reference the PetStoreRepo project. We also 
+    WebApi (PetStore) project and Lambdas projects to reference the PetStoreRepo project. We also 
     inserted an environment variable "TABLE_NAME" in the WebApi project's launchSettings.json file to 
     reference a table called "PetStoreDev-DB" in the DynamoDb resource.
 </p>
