fixed doc error in vswin_repo

--- a/src/pages/tutorial/tutorial_vswin_repo.html
+++ b/src/pages/tutorial/tutorial_vswin_repo.html
@@ -30,7 +30,7 @@ menu2: vswin
         </li>
         <li>Add Project Dependencies
             <ol type="a">
-                <li>Open the PetControllerImpl.csproj file.</li>
+                <li>Open the PetStoreRepo.csproj file.</li>
                 <li>Copy the following ItemGroup into the .csproj file.
                     <pre><code class="language-bash">
     &lt;ItemGroup>
