vsmac tut update

--- a/src/pages/tutorial/tutorial_vsmac_lazystack.html
+++ b/src/pages/tutorial/tutorial_vsmac_lazystack.html
@@ -17,7 +17,7 @@ menu2: vsmac
 
     <h4>1.1 Create LazyStackTutorial folder</h4>
     <p>Create a LazyStackTutorial folder. We will be creating Visual Studio solutions under 
-        this folder. A typical location for this folder on Windows is "C:\Users\User\source\Repos\LazyStackTutorial" where User is your Windows user name.
+        this folder.
     </p>
     <h4>1.2 Clone LazyStack repository</h4>
     <ol>
@@ -25,7 +25,7 @@ menu2: vsmac
         <li>CD into the LazyStackTutorial folder.</li>
         <li>Issue the following git command:
             <pre><code class="language-bash">git clone https://github.com/InSciCo/LazyStack.git</code></pre>
-            The LazyStack folder is created.
+            The LazyStack repository folder is created.
         </li>
     </ol>
 
