--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -6,17 +6,53 @@ menu1: business
 
 <div class="lz-r-content">
     <h3>LazyStack Business Stakeholder Overview</h3>
-    <p>The AWS Services Infrastructure is vast and can be intimidating and costly to get started with. The objective of LazyStack SMF is to demystify the complexities of AWS services and security infrastructure by providing concrete implementations of these services and a prescriptive approach to using them to build AWS Serverless Applications. This reduces the technical risks and costs associated with adopting AWS as your Serverless Application cloud platform.
+    <p>The LazyStack team assembled and orchestrated a broad 
+        swath of key technologies and best-practices together into one cohesive 
+        end-to-end software development, testing, and deployment process to make getting 
+        to market with a new mobile or web app faster. 
     </p>
-    <p>LazyStack SMF has extensive documentation that serves as a “blueprint” for a development shop wanting to get started with AWS/.NET serverless application development. The LazyStack SMF is comprised of PowerShell management scripts and CloudFormation templates that automate everything that can be automated in setting up and managing a comprehensive serverless stack development pipeline using AWS Services. LazyStack SMF also works seamlessly with our LazyStack Model Driven Development (MDD) tool.
+    <p>In our experience, this level of technology and best-practice integration can typically take 
+        a new practitioner months to master. With LazyStack they can get started, with confidence, in days.
+    </p>    
+    <p>LazyStack is comprised of the following:
+        <ul>
+            <li>LazyStack Software Management Framework (SMF)</li>
+            <li>LazyStack Model Driven Development (MDD)</li>
+            <li>LazyStack open source libraries</li>
+            <li>LazyStack tutorials and user guide</li>
+        </ul>
+    </p>
+    <p></p>
+    <img src="/assets/img/LazyStackMission.svg" width="100%">
+    <p></p>
+    <h4>LazyStack SMF</h4>
+    <p>Setting up secure AWS Organizations and accounts correctly the first time can be tricky. LazyStack SMF sets up AWS services and security infrastructure according to AWS best practices. 
+    </p>
+    <p>LazyStack SMF has extensive documentation that serves as a “blueprint” for a development shop wanting to get started with AWS/.NET serverless application development. The LazyStack SMF is comprised of PowerShell management scripts and CloudFormation templates that automate everything that can be automated in setting up and managing a comprehensive serverless stack development pipeline using AWS Services and GitHub. LazyStack SMF also works seamlessly with our LazyStack Model Driven Development (MDD) tool.
     </p>
 
-<img src="/assets/img/LazyStackMission.svg" width="100%">
+
 <p></p>
 <p>Our mission is to be a "startup in a box".</p>
 <p>The LazyStack Software Management Framework (SMF) ensures your collaborative development process, test process, and production 
-    deployments are managed efficiently and securely. The LazyStack Model Driven Development (MDD) development tools 
-    reduce development costs, improve development agility, and decrease time to market for your products.
+    deployments are managed efficiently and securely. 
+</p>
+<h4>LazyStack MDD</h4>
+<p>LazyStack Model Driven Development (MDD) reduces development costs, improve development agility, and decrease time to market for your products.</p>
+<p>LazyStack MDD demystifies the complexities of AWS services and security infrastructure by providing concrete implementations of these services and a prescriptive approach to using them to build AWS Serverless Applications. This reduces the technical risks and costs associated with adopting AWS as your Serverless Application cloud platform.
+</p>
+<p>LazyStack MDD ingests an OpenAPI Rest specification and generates C# or TypeScript ClientSDK libraries, .NET Lambda 
+    projects and the AWS Serverless stack configuration necessary to stand up a commercial grade stack on AWS.
+</p>
+<img src="/assets/img/LambdaEventMapping_04_withmarks.svg" width="100%">
+<p></p>
+<p>Your team provides the OpenApi specification and edits the LazyStack directives file. 
+    LazyStack MDD then generates the AWS Serverless template, Lambda Projects, and Controller Projects for your 
+    Serverless Stack. Your team then provides the controller method implementations expressing the business logic 
+    of your application. </p>
+<p>
+    The most difficult and error-prone elements of your Serverless Stack are generated for you from tried and true 
+    templates that adhere to AWS Best Practices.
 </p>
 
 <h3>Why did we build LazyStack?</h3>
