--- a/src/pages/intro/intro_techoverview.html
+++ b/src/pages/intro/intro_techoverview.html
@@ -6,18 +6,16 @@ menu1: tech
 
 <div class=lz-r-content>
     <h3>LazyStack Technical Overview</h3>
-    <p>LazyStack is a tool that ingests an OpenApi (swagger) REST API specification and generates the AWS Serverless Application Model
-        (SAM) template and the C# AWS Lambda projects necessary to stand up a fully featured commercial-grade application stack
-        in AWS. It also generates a client application SDK making it simple to call that stack from C# applications.</p>
-    <p>LazyStack is comprised of a free stack generator tool and some MIT licensed open-source support libraries.</p>
-    <ul>
-        <li>LazyStack Generator - Free Visual Studio IDE Extension, and Free DOTNET CLI Tool </li>
-        <li>LazyStackAuth - MIT Licensed authentication library</li>
-        <li>LazyStackDynamoDBRepo - MIT Licensed CRUDL library for DynamoDB</li>
-    </ul>
+    <p>The LazyStack team assembled and orchestrated a broad 
+        swath of key technologies and best-practices together into one cohesive 
+        end-to-end software development, testing, and deployment process to make getting 
+        to market with a new mobile or web app faster. 
+    </p>
+    <p>In our experience, this level of technology and best-practice integration can typically take 
+        a new practitioner months to master. With LazyStack they can get started, with confidence, in days.
+    </p>       
 
 <div class=lz-r-content>
-    <h3>LazyStack Technical Lead Overview</h3>
     <p>LazyStack is comprised of the following:</p>
     <ul>
         <li>LazyStack Software Management Framework (SMF)<br>
@@ -25,7 +23,7 @@ menu1: tech
             Testing and Deployment collaboration tool chain on AWS and GitHub.
         </li>
         <br>
-        <li>LazyStack Development Tools<br>
+        <li>LazyStack Model Driven Development (MDD)<br>
             LazyStack ingests an OpenApi (swagger) REST API specification 
             and generates the AWS Serverless Application Model (SAM) template 
             and the C# AWS Lambda projects necessary to stand up a fully featured 
@@ -37,6 +35,23 @@ menu1: tech
             <ul>
                 <li>LazyStackAuth - MIT Licensed authentication library</li>
                 <li>LazyStackDynamoDBRepo - MIT Licensed CRUDL library for DynamoDB</li>
+            </ul>
+            <br>
+        </li>
+        <li>LazyStack tutorials
+            <ul>
+                <li>Visual Studio for Windows</li>
+                <li>Visual Studio for Mac</li>
+                <li>.NET CLI</li>
+            </ul>
+            <br>
+        </li>
+        <li>Comprehensive User Guide
+            <ul>
+            <li>Software Management Framework</li>
+            <li>Model Driven Development</li>
+            <li>Client SDK</li>
+            <li>LazyStack Libraries</li>
             </ul>
         </li>
     </ul>
