--- a/src/pages/intro/intro_techoverview.html
+++ b/src/pages/intro/intro_techoverview.html
@@ -13,7 +13,8 @@ menu1: tech
     </p>
     <p>In our experience, this level of technology and best-practice integration can typically take 
         a new practitioner months to master. With LazyStack they can get started, with confidence, in days.
-    </p>       
+    </p>
+    <p>Use LazyStack to build AWS Serverless Stacks with .NET Lambdas called from C# or TypeScript clients.</p>       
 
 <div class=lz-r-content>
     <p>LazyStack is comprised of the following:</p>
@@ -27,8 +28,8 @@ menu1: tech
             LazyStack ingests an OpenApi (swagger) REST API specification 
             and generates the AWS Serverless Application Model (SAM) template 
             and the C# AWS Lambda projects necessary to stand up a fully featured 
-            commercial-grade application stack in AWS. It also generates a client 
-            application SDK making it simple to call that stack from C# applications.
+            commercial-grade application stack in AWS. It also generates a C# or TypeScript client 
+            application SDK. Calling your stack from a Mobile or Web app is simple.
             </li>
             <br>
         <li>LazyStack Libraries
