Updated callout on index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -104,8 +104,8 @@ background-image: linear-gradient(#181525,#443d6e)
                     That way, you could demonstrate revenue to investors before committing serious capital. Luckily, 
                     Microsoft .Net and C# provides almost everything we need... if only we had a way of connecting it 
                     to the undisputed king of cloud: AWS. Enter 'LazyStack', our one stop shop for C# front-end/AWS 
-                    back-end solutions. Install our free Visual Studio extension and leapfrog months of development with a 
-                    single click.
+                    back-end solutions. We now support TypeScript clients as well! Install our free Visual Studio extension and 
+                    leapfrog months of development with a single click.
                 </div>
             </div>
         </div>
