--- a/src/pages/roadmap/lazystackrepo.html
+++ b/src/pages/roadmap/lazystackrepo.html
@@ -52,6 +52,7 @@ menu0: roadmap
 
 <h4>LazyStackAuth Library NuGet package</h4>
 <ul>
+    <li>LazyStackAuth.2.1.0.nupkg (6/18/2022)</li>
     <li>LazyStackAuth.1.6.0.nupkg (5/25/2022)</li>
     <li>LazyStackAuth.1.4.0.nupkg (10/26/2021)</li>
     <li>LazyStackAuth.1.3.0.nupkg (10/12/2021)</li>
@@ -61,6 +62,7 @@ menu0: roadmap
 </ul>
 <h4>LazyStackDynamoDBRepo Library NuGet package</h4>
 <ul>
+    <li>LazyStackDynamoDBRepo.2.1.0.nupkg (6/18/2021)</li>
     <li>LazyStackDynamoDBRepo.1.6.0.nupkg (5/25/2021)</li>
     <li>LazyStackDynamoDBRepo.1.2.0.nupkg (7/6/2021)</li>
     <li>LazyStackDynamoDBRepo.1.1.0.nupkg (6/29/2021)</li>
